improve permission denied test with JUnit 5 OS condition
Refactored the permission denied test to use @DisabledOnOs(OS.WINDOWS) for better cross-platform support.
Removed unnecessary try-catch and assumption logic for unsupported operations.

Co-authored-by: GitHub Copilot <noreply@github.com>